feat: improve cv

--- a/main.tex
+++ b/main.tex
@@ -46,27 +46,32 @@
 {\textit{Role: Product Software Developer}} \hspace*{131pt} Apr-2022 to Present
     \newline- Optimize responsive web UIs with React/Next.js, boosting UX.
     \newline- Develop and maintain backend systems using Django.
-    \newline- Ensure reliability by implementing unit tests with pytest for each new feature and fix.
+    \newline- Guarantee reliability through pytest unit tests for features and fixes.
     \newline- Maintain and deploy React Native apps, enhancing stability and features.
     \newline- Deploy API Gateway and Lambda, streamlining serverless scalability.
     \newline- Set up secure SFTP on EC2 for data transfer and storage in S3.
     \newline- Containerize applications with Docker for AWS Fargate deployment.
     \newline- Develop a Go microservice for compressing multimedia files (PDF, PNG, JPG, etc), exploring new language capabilities.
-    \newline- Schedule and manage frequent backend processes with Celery, improving efficiency and automation.
-    \newline- Support non-technical teams by executing on-demand SQL queries in Metabase for business metrics analysis.
-    \newline- Facilitate third-party integrations by providing technical support during API onboarding meetings.
-    \newline- Provide ongoing support for product quality by addressing Sentry alerts in Slack error-reporting channels, actively resolving bugs across various platforms.
+    \newline- Automate and optimize backend processes with scheduled Celery tasks.
+    \newline- Provide business insights via on-demand SQL queries in Metabase for non-technical teams.
+    \newline- Guide API onboarding for third-party integrations with technical support.
+    \newline- Maintain product quality by resolving Sentry-reported errors via Slack channels across platforms.
     \newline\newline\textit{\underline{Tools:} Django, Next.js, React Native, AWS, Postgres \underline{Methodology:} Agile}
     \newline\newline
 {\textit{Role: Frontend \&\ Mobile Developer}} \hspace*{97pt} Oct-2020 to Apr-2022
-    \newline- Developed mobile MVP in 6 months using Expo, React Native, and TypeScript.
-    \newline- Applied Atomic Design for scalable UI; used Zustand/Immer for state management.
-    \newline- Optimized data fetching with React Query; implemented reactive product search.
-    \newline- Designed multi-step checkout flow (address, payment, confirmation).
-    \newline- Set up Mixpanel tracking for user metrics and behavior analysis.
-    \newline- Secured app with JWT authentication.
-    \newline- Built HOCs and custom hooks for component reusability.
-    \newline- Handled Expo pre-builds for native libraries; managed OTA and app store releases.
+    \newline- Built and launched App MVP with Expo, React Native, and TypeScript in 6 months.
+    \newline- Designed scalable UI using Atomic Design principles.
+    \newline- Managed global state with Zustand and Immer.
+    \newline- Enhanced data handling with React Query. 
+    \newline- Implemented E2E testing with Cypress, automated via GitHub Actions CI for every production release.
+    \newline- Integrated reactive search for real-time product discovery.
+    \newline- Secured user access with JWT authentication, using OS-level secure storage for refresh tokens.
+    \newline- Automated linting, formatting, and TypeScript checks with Husky pre-commit hooks.
+    \newline- Increased component reusability with HOCs and custom hooks.
+    \newline- Managed native integrations with Expo pre-builds.
+    \newline- Managed OTA and app store releases.
+    \newline- Implemented deep linking to mirror website navigation, ensuring seamless user experience across platforms.
+    \newline- Configured Google Analytics/Mixpanel for user tracking and behavior analysis.
 \newline\newline\textit{\underline{Tools:} React Native, TypeScript, Zustand, React Query \underline{Methodology:} Agile}
 \newline\newline
 
